# llm-news-curator

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: daily-news-curator.yml
src/: config.py  image_generator.py  main.py  news_curator.py  slack_poster.py  x_news_client.py
